# AgenticTraveler_project

./: README.md  README_REWRITE.md  app.py  appREAD.md  main.py  pyproject.toml  requirements.txt  test_rewrite_syntax.py
dataset/: dataset_monument_florence.csv  dataset_monument_florence.xlsx
script/KG/: ARCO_access.py  dbpedia_entities.db  dbpedia_entities.json  dowloadwikidata.py  local_DBpedia_access.py  local_DBpedia_print_all.py
script/RAG system/: rag_system_smolagent.py  rag_sytem.py
script/agent/: agent_base_optim.py
